--- a/Pos2dWebapiWorkspace/WebContent/index.html
+++ b/Pos2dWebapiWorkspace/WebContent/index.html
@@ -5,6 +5,6 @@
 <title>Insert title here</title>
 </head>
 <body>
-Welcome to the world of IOT
+<H2>Welcome to the world of IOT</H2>
 </body>
 </html>
